--- a/Branding.html
+++ b/Branding.html
@@ -6,7 +6,7 @@
   <title>Branding & Design - Emmanuel Olumide</title>
   <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/branding.css">
+  <link rel="stylesheet" href="css/Branding.css">
 </head>
 <body>
 
