Update branding gallery imagess

--- a/Branding.html
+++ b/Branding.html
@@ -34,18 +34,18 @@
     <div class="gallery-grid">
       <!-- Each .gallery-item has a data-images attribute (pipe-separated list of image URLs).
            The visible <img> is the thumbnail; when clicked the modal will open the whole list. -->
-      <div class="gallery-item" data-images="assets/Logo1.jpg|assets/Logo 7.png|assets/logo2.jpeg|assets/logo 5.png|assets/logo 9.jpeg" data-captions="">
-        <img src="assets/Logo 7.png" alt="Logo Design">
+      <div class="gallery-item" data-images="assets/Logo1.jpg|assets/Logo 7.jpg|assets/logo2.jpg|assets/logo 5.jpg|assets/logo 9.jpg" data-captions="">
+        <img src="assets/Logo 7.jpg" alt="Logo Design">
         <div class="overlay"><p>Logo Designs</p></div>
       </div>
 
-      <div class="gallery-item" data-images="assets/Temmie.FYB.Sales-01.jpeg|assets/SeptemBer Rod-04.jpeg|assets/Content Creation-01.jpeg|assets/Flyer 4.jpeg|assets/Flyer 5.jpeg|assets/House party.jpg|assets/Temmy02.jpg|assets/menu.jpg|assets/Flyer 1.jpg|assets/Flyer 2.jpg|assets/Business Policy.jpg" data-captions="">
-        <img src="assets/Flyer 5.jpeg" alt="Flyer Design">
+      <div class="gallery-item" data-images="assets/Temmie.FYB.Sales-01.jpg|assets/SeptemBer Rod-04.jpg|assets/Content Creation-01.jpg|assets/Flyer 4.jpg|assets/Flyer 5.jpg|assets/House party.jpg|assets/Temmy02.jpg|assets/menu.jpg|assets/Flyer 1.jpg|assets/Flyer 2.jpg|assets/Business Policy.jpg" data-captions="">
+        <img src="assets/Flyer 5.jpg" alt="Flyer Design">
         <div class="overlay"><p>Flyer Designs</p></div>
       </div>
 
-      <div class="gallery-item" data-images="assets/Brand 4.png|assets/brand 2.jpg|assets/Brand 3.jpg|assets/FAQ.jpg|assets/bRAND pERSONALITY.png|assets/Letter Head 12.jpg" data-captions="">
-        <img src="assets/Brand 4.png" alt="Brand Identity">
+      <div class="gallery-item" data-images="assets/Brand 4.jpg|assets/brand 2.jpg|assets/Brand 3.jpg|assets/FAQ.jpg|assets/bRAND pERSONALITY.jpg|assets/Letter Head 12.jpg|assets/Graphic Design Course Isokan-01.jpg" data-captions="">
+        <img src="assets/Brand 4.jpg" alt="Brand Identity">
         <div class="overlay"><p>Brand Identity</p></div>
       </div>
 
