--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="contact.html" class="btn-secondary">Get In Touch</a>
             </div>
         </div>
-        <div class="scroll-indicator">↓</div>
+        <div class="scroll-indicator">Scroll Down ↓</div>
     </section>
 
     <!-- Featured Projects -->
